# family_tree

./: .Dockerfile  .gitignore  Dockerfile  Family_Tree.lnk  dash_tree.py  data_collection.ipynb  main.py  pyproject.toml  readme.md  requirements.txt  run_family_tree.bat  run_tree.ps1  setup.bat  tree.py
src/: create_tree.py  input_prompts.py  main.py  tree_app.py
utils/: datacollection.py
