[tool.poetry]
name = "family-tree"
version = "0.1.0"
description = "This repo contains my project that aims to enable users to visualize their family tree if their ancestors are in the database. The database contains people who were born in and near Tótkomlós, Hungary in the last three centuries, meaning roughly 70k individual."
authors = ["pibence <pipis.bence@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "3.9.6"
pandas = "2.2.3"
pyvis = "0.1.9"
tabulate = "0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
